# CAN_firmware_loader_UI2048

./: .gitignore  CMakeLists.txt  main.cpp  main_window.cpp  main_window.h
FWLoader/: DeviceHolder.cpp  DeviceHolder.hpp  FWLoader.cpp  FWLoader.hpp
Monitor/: socket_adapter.cpp  socket_adapter.h
Protos/: -Protos.vcxproj  -Protos.vcxproj.filters  Protos.vcxproj  Protos.vcxproj.filters  ReadMe.txt  protos_boot_msg.hpp
ProtosServerUI/: log_table_model.cpp  log_table_model.h  log_view.cpp  log_view.h
